chore: update readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "georust",
         "qrest",
         "reqwest",
+        "rustup",
+        "Screwtape's",
         "todos",
         "Vitale",
         "wkid"
