--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "qrest"
 version = "0.2.1"
 edition = "2021"
+description = "Queries an ArcGIS REST service /query endpoint"
+authors =  ["Andrew Vitale <vitale232@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
